     to emphasize that DBAPI has no explicit begin().
   
   - added "views=True" option to metadata.reflect(), 
     will add the list of available views to those
     being reflected.  [ticket:1936]

   - engine_from_config() now accepts 'debug' for 
     'echo', 'echo_pool', 'force' for 'convert_unicode',
     boolean values for 'use_native_unicode'.  
     [ticket:1899]

- mssql
   - Fixed reflection bug which did not properly handle
     reflection of unknown types.  [ticket:1946]
    
   - Fixed bug where aliasing of tables with "schema" would
     fail to compile properly.  [ticket:1943]
     
- informix
   - *Major* cleanup / modernization of the Informix 
     dialect for 0.6, courtesy Florian Apolloner. 
     [ticket:1906]

- tests
   - the NoseSQLAlchemyPlugin has been moved to a
     new package "sqlalchemy_nose" which installs
     along with "sqlalchemy".  This so that the "nosetests"
     script works as always but also allows the 
     --with-coverage option to turn on coverage before
     SQLAlchemy modules are imported, allowing coverage
     to work correctly.
      
- misc
   - CircularDependencyError now has .cycles and .edges
     members, which are the set of elements involved in
     one or more cycles, and the set of edges as 2-tuples.  
     [ticket:1890]
     
0.6.4
=====
- orm
  - The name ConcurrentModificationError has been
    changed to StaleDataError, and descriptive 
    error messages have been revised to reflect
    exactly what the issue is.   Both names will
    remain available for the forseeable future
    for schemes that may be specifying 
    ConcurrentModificationError in an "except:"
    clause.

  - Added a mutex to the identity map which mutexes
    remove operations against iteration methods,
    which now pre-buffer before returning an 
    iterable.   This because asyncrhonous gc 
    can remove items via the gc thread at any time.
    [ticket:1891]
    
  - The Session class is now present in sqlalchemy.orm.*.