@@ -194,6 +194,10 @@ CHANGES
      boolean values for 'use_native_unicode'.  
      [ticket:1899]
 
+- postgresql
+   - Added "as_tuple" flag to ARRAY type, returns results
+     as tuples instead of lists to allow hashing.
+     
 - mssql
    - Fixed reflection bug which did not properly handle
      reflection of unknown types.  [ticket:1946]
